--- a/style.css
+++ b/style.css
@@ -18,3 +18,25 @@
 .wave3 {
      margin-top: -150px;
 }
+
+.card:hover {
+     opacity: 0.8;
+     transition: ease-in-out 0.5s;
+     transform: scale(1.1, 1.1);
+     z-index: 9999;
+}
+
+@media only screen and (max-width: 600px) {
+     .wave1 {
+          margin-top: 0px;
+     }
+
+     .wave2 {
+          margin-bottom: 0px;
+          margin-top: 50px;
+     }
+
+     .wave3 {
+          margin-top: 0px;
+     }
+}
